Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 <h3>
 <a name="master-sonic-arts" class="anchor" href="#master-sonic-arts"><span class="octicon octicon-link"></span></a>Master Sonic Arts</h3>
 
+<h2>
+<a name="programma" class="anchor" href="#programma"><span class="octicon octicon-link"></span></a>Programma</h2>
+
 <ol>
 <li>
 <p>Introduzione alle diverse tipologie di microfoni, per architettura, per curve polari e per utilizzo.</p>
@@ -115,8 +118,54 @@
 <li>Percezione timbrica e localizzazione</li>
 </ul>
 </li>
-</ol><h3>
-<a name="testi" class="anchor" href="#testi"><span class="octicon octicon-link"></span></a>Testi</h3>
+</ol><h2>
+<a name="stereo-pairs" class="anchor" href="#stereo-pairs"><span class="octicon octicon-link"></span></a>Stereo Pairs</h2>
+
+<p>La registrazione delle coppie stereofoniche è avvenuta il giorno 2 aprile 2014 presso l'aula T25 della facoltà di lettere e filosofia dell'università Tor Vergata. </p>
+
+<h3>
+<a name="i-microfoni-impiegati-per-la-registrazione-comparata" class="anchor" href="#i-microfoni-impiegati-per-la-registrazione-comparata"><span class="octicon octicon-link"></span></a>I microfoni impiegati per la registrazione comparata</h3>
+
+<ul>
+<li>2 x Schoeps CMC5--U + MK4</li>
+<li>1 x Schoeps CMTS</li>
+<li>1 x Neumann KMR81</li>
+<li>1 x Neumann U87</li>
+<li>2 x DPA 4006</li>
+<li>1 x Superlux s502</li>
+<li>Soundfield ST450</li>
+</ul><h3>
+<a name="le-configurazioni-stereo-realizzate" class="anchor" href="#le-configurazioni-stereo-realizzate"><span class="octicon octicon-link"></span></a>Le configurazioni stereo realizzate:</h3>
+
+<ul>
+<li>XY 90° (CMC5)</li>
+<li>Blumlein (CMTS)</li>
+<li>MS (KMR81 + U87)</li>
+<li>AB (DPA)</li>
+<li>ORTF (Superlux)</li>
+</ul><h3>
+<a name="audio-files" class="anchor" href="#audio-files"><span class="octicon octicon-link"></span></a>Audio Files</h3>
+
+<ul>
+<li><a href="">ESEMSA 2014 Stereo Pairs - prima parte</a></li>
+<li><a href="">ESEMSA 2014 Stereo Pairs - seconda parte</a></li>
+<li><a href="">ESEMSA 2014 Ambisonic Pairs</a></li>
+</ul><h3>
+<a name="stereo-pairs-2009---materiali" class="anchor" href="#stereo-pairs-2009---materiali"><span class="octicon octicon-link"></span></a>Stereo Pairs 2009 - Materiali</h3>
+
+<p>I materiali del 2009 sono una alternativa a quelli registrati in aula T25. Sono stati registrati presso il conservatorio Santa Cecilia di Roma nel 2009. <a href="https://www.academia.edu/6599711/Stereo_Pairs_-_2009">Breve relazione</a>.</p>
+
+<ul>
+<li><a href="http://www.giuseppesilvi.com/__depot/2009_STEREOPAIRS/AUDIOFILES/SESSION0NE.zip">Stereo Pairs 2009 - Audio Files Session One</a></li>
+<li><a href="http://www.giuseppesilvi.com/__depot/2009_STEREOPAIRS/AUDIOFILES/SESSIONTWO.zip">Stereo Pairs 2009 - Audio Files Session Two</a></li>
+<li><a href="http://www.giuseppesilvi.com/__depot/2009_STEREOPAIRS/STEREO_PAIRS_2009_DVD.zip">Stereo Pairs 2009 - DVD</a></li>
+</ul><h2>
+<a name="esame-orale" class="anchor" href="#esame-orale"><span class="octicon octicon-link"></span></a>Esame Orale</h2>
+
+<p>Per l'esame orale si consiglia la redazione di un breve documento su uno degli argomenti affrontati a lezione. Nel caso in cui si scelga di trattare le coppie stereofoniche si consiglia di caricare i file relativi alle singole configurazioni su un editor multitraccia e ascoltarene una alla volta prendendo nota delle considerazioni personali.</p>
+
+<h2>
+<a name="testi" class="anchor" href="#testi"><span class="octicon octicon-link"></span></a>Testi</h2>
 
 <p>Dispense a cura del docente.</p>
       </section>
